@@ -88,6 +88,8 @@ because of Phabricator reports.
   Use MediaWikiServices::getMainWANObjectCache instead.
 * ObjectCache::newWANCacheFromParams, deprecated in 1.35, was removed.
   Construct WANObjectCache directly instead, or use MediaWikiServices.
+* ApiQueryUserInfo::getBlockInfo, deprecated in 1.34, was removed. Use
+  ApiBlockInfoTrait::getBlockDetails instead.
 * …
 
 === Deprecations in 1.35 ===
